--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "inkcli",
-  "version": "0.1",
+  "version": "0.1.0",
   "description": "A command line interface for running inkjs games.",
   "main": "main.js",
   "author": "Richard Sherriff",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "inkjs": "^1.11.0"
   }
 }
